# assumer-py

./: .gitignore  README.md  pyproject.toml
src/assumer_py/: __init__.py  assumer.py  aws.py  awsboto3.py  colours.py  logger.py
