[tool.poetry]
name = "assumer-py"
version = "0.1.0"
description = ""
authors = ["TimekillerTK <erwartungen@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.12"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
